Replace magic numbers in commands package
Bundled with some minor commenting changes to Parser